# ComfyUI-MAMMA

./: .gitignore  GATED_WEIGHTS.md  LICENSE  README.md  SECURITY.md  download_weights.py  install_env.py  mamma_runner.py  mesh_export.py  nodes.py  pyproject.toml  usd_export.py  video_utils.py
.github/ISSUE_TEMPLATE/: config.yml  missing_weights.yml
docs/: MAINTAINER.md  TROUBLESHOOTING.md  WEIGHTS.md
example_workflows/: MAMMA Render.json
patches/: README.md
patches/mamma/landmarks/: run_ma_2d.py
patches/mamma/landmarks/utils/: video_utils.py
patches/mamma/optimization/: run_ma_3d.py
patches/mamma/optimization/scene_debug/: renderer.py
patches/mamma/optimization/utils/: utils_camera.py  video_tools.py
patches/mamma/segmentation/: process_sequence.py  run_ma_masks.py
patches/mamma/segmentation/core/: pipeline.py
patches/mamma/visualization/: overlay.py  run_ma_vis.py
scripts/: apply_windows_patches.bat  apply_windows_patches.py  doctor.bat  download_gated_weights.bat  download_public_weights.bat  install_env.bat  set_mamma_repo.bat.example  verify_clean.bat
